tried to fix the layout shifting error

--- a/src/styles/globals.css
+++ b/src/styles/globals.css
@@ -49,11 +49,6 @@
 :root {
 	--background: #ffffff;
 	--foreground: #171717;
-	--vh: 100vh; /* Fallback */
-}
-
-.hero-container {
-	height: calc(var(--vh, 1vh) * 100); /* Use the custom height variable */
 }
 
 /* Hide scrollbar for Chrome, Safari and Opera */
@@ -68,6 +63,9 @@ html {
 	margin: 0;
 	padding: 0;
 	box-sizing: border-box;
+	height: 100%;
+	/* max-height: fit-content; */
+	overflow-x: hidden;
 }
 
 * {
@@ -79,8 +77,7 @@ html {
 body {
 	background-color: #1a3636;
 	color: #ffffff;
-
-	/* background-color: var(--background);
-	color: var(--foreground); */
+	height: 100%;
+	overflow-x: hidden;
 	text-rendering: optimizeLegibility;
 }
